--- a/app/src/main/res/layout/tasks_fragment.xml
+++ b/app/src/main/res/layout/tasks_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context="com.free.your_mind.TaskFragment">
+    tools:context="com.free.your_mind.TasksFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,6 +17,12 @@
             android:layout_marginTop="300dp"
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/do_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Do" />
 
             <TextView
                 android:id="@+id/textView2"
