--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -11,12 +11,32 @@
         android:label="IntroFragment"
         tools:layout="@layout/intro_fragment">
         <action
-            android:id="@+id/action_introFragment_to_taskFragment"
-            app:destination="@id/taskFragment" />
+            android:id="@+id/action_introFragment_to_tasksFragment"
+            app:destination="@id/tasksFragment" />
     </fragment>
     <fragment
-        android:id="@+id/taskFragment"
-        android:name="com.free.your_mind.TaskFragment"
-        android:label="task_fragment"
-        tools:layout="@layout/task_fragment" />
+        android:id="@+id/tasksFragment"
+        android:name="com.free.your_mind.TasksFragment"
+        android:label="tasks_fragment"
+        tools:layout="@layout/tasks_fragment" >
+        <action
+            android:id="@+id/action_tasksFragment_to_taskDetailsFragment"
+            app:destination="@id/taskDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/taskDetailsFragment"
+        android:name="com.free.your_mind.TaskDetailsFragment"
+        android:label="TaskDetailsFragment"
+        tools:layout="@layout/task_details_fragment">
+        <action
+            android:id="@+id/action_taskDetailsFragment_to_congratulationFragment"
+            app:destination="@id/congratulationFragment"
+            app:popUpTo="@+id/taskDetailsFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/congratulationFragment"
+        android:name="com.free.your_mind.CongratulationFragment"
+        android:label="CongratulationFragment"
+        tools:layout="@layout/congratulation_fragment"/>
 </navigation>
