--- a/app/src/main/res/layout/task_details_fragment.xml
+++ b/app/src/main/res/layout/task_details_fragment.xml
@@ -14,6 +14,16 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/done_button"
                 android:layout_width="match_parent"
