--- a/app/src/main/res/layout/tasks_fragment.xml
+++ b/app/src/main/res/layout/tasks_fragment.xml
@@ -12,23 +12,12 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/tasks"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="300dp"
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/do_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Do" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tasks" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
