--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -33,6 +33,9 @@
             app:destination="@id/congratulationFragment"
             app:popUpTo="@+id/taskDetailsFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="taskId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/congratulationFragment"
