--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#8d99ae</color>
     <color name="colorPrimaryDark">#2b2d42</color>
-    <color name="colorAccent">#2ca58d</color>
+    <color name="colorAccent">#84bc9c</color>
+    <color name="colorAccentDark">#2ca58d</color>
     <color name="colorLight">#edf2f4</color>
-    <color name="colorLightSecond">#84bc9c</color>
     <color name="mainTextColor">#3B3B46</color>
+    <color name="background">#edf2f4</color>
 </resources>
