--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,9 +20,11 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorLight</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="fontFamily">@font/roboto_mono_thin</item>
+        <item name="android:textColorPrimary">@color/colorLight</item>
+        <item name="android:backgroundTint">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
@@ -36,4 +38,15 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/mainTextColor</item>
     </style>
+
+    <style name="Widget.App.Button" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="strokeWidth">3dp</item>
+        <item name="strokeColor">@color/colorAccentDark</item>
+        <item name="android:textColor">@color/colorAccentDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+    </style>
+
+
 </resources>
