--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,9 +20,11 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorLight</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="fontFamily">@font/roboto_mono_thin</item>
+        <item name="android:textColorPrimary">@color/colorLight</item>
+        <item name="android:backgroundTint">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
@@ -35,5 +37,15 @@
     <style name="TextAppearance.Title" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/mainTextColor</item>
+    </style>
+
+    <style name="MainButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="strokeColor">#ffffff</item>
+        <item name="android:textColor">#d17d00</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:backgroundTint">@color/colorLight</item>
+        <item name="cornerRadius">12dp</item>
     </style>
 </resources>
