--- a/app/src/main/res/drawable/top.xml
+++ b/app/src/main/res/drawable/top.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="640dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="600dp"
     android:height="155dp"
     android:viewportWidth="640"
-    android:viewportHeight="155">
+    android:viewportHeight="155"
+    tools:ignore="VectorRaster">
   <path
       android:pathData="M0,0L640,0L640,155C522.3,18.01 410.16,-14.7 303.61,56.89C197.05,128.47 95.85,128.47 0,56.89L0,0Z"
       android:fillColor="#2b2d42"
