--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="40dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:paddingTop="0dp"
-            android:background="@color/background">
-
+            android:orientation="vertical">
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:elevation="0dp"
                 android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -33,27 +27,22 @@
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
             </com.google.android.material.appbar.AppBarLayout>
 
-            <ImageView
+            <View
                 android:id="@+id/topStyle"
-                android:layout_below = "@id/appBar"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/top"/>
+                android:layout_width="fill_parent"
+                android:layout_height="100dp"
+                android:background="@drawable/top" />
 
             <fragment
                 android:id="@+id/navHostFragment"
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/appBar"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/navigation" />
-        </RelativeLayout>
+        </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
